# uclv_tactile_sensor

./: .gitignore  README.md  repos.yaml
src/uclv_tactile_common/: CMakeLists.txt  my_bridge_mapping.yaml  package.xml
src/uclv_tactile_common/action/: ComputeBias.action
src/uclv_tactile_common/msg/: TactileStamped.msg
src/uclv_tactile_driver/: CMakeLists.txt  package.xml
src/uclv_tactile_driver/launch/: tactile_serial.py  tactile_serial_debiased.py
src/uclv_tactile_driver/src/: read_tactile_serial_node.cpp  remove_bias_node.cpp
uclv_tactile_driver/: CMakeLists.txt  package.xml
uclv_tactile_driver/src/: read_tactile_serial_node.cpp  remove_bias_node.cpp
uclv_tactile_interfaces/: CMakeLists.txt  package.xml
uclv_tactile_interfaces/msg/: TactileStamped.msg
