<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uclv_tactile_common</name>
  <version>0.0.0</version>
  <description>The uclv_tactile_common package</description>
  <maintainer email="raffaele.mazza@unicampania.it">Raffaele Mazza</maintainer>
  <author email="raffaele.mazza@unicampania.it">Raffaele Mazza</author>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Migrating codes -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- End migrating codes -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
