<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uclv_tactile_driver</name>
  <version>0.0.0</version>
  <description>The uclv_tactile_driver package</description>
  <maintainer email="raffaele.mazza@unicampania.it">Raffaele Mazza</maintainer>
  <author email="raffaele.mazza@unicampania.it">Raffaele Mazza</author>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- <exec_depend>ros2launch</exec_depend> -->
  <depend>ros2launch</depend>

  <!-- Migrating codes -->
  <depend>uclv_tactile_common</depend>
  <depend>serial</depend>
  <!-- <depend>sun_systems_lib</depend> -->
  <!-- <depend>ros_toon</depend> -->
  <!-- <depend>sun_learning_lib</depend>
  <depend>sun_ros_msgs</depend> -->
  <!-- End migrating codes -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>